# minesweeper_python

./: ARCHITECTURE.md  README.md  TODO.md  pyproject.toml  setup.cfg
src/minesweeper/: Config.py  Untitled-1.py  __init__.py  __main__.py  minesweeper.py
