[metadata]
name = minesweeper_python
version = 0.1.3
author = Nikolaos Chatzikonstantinou
author_email = nchatz314@gmail.com
maintainer = Nikolaos Chatzikonstantinou
maintainer_email = nchatz314@gmail.com
description = A minesweeper in Python using Pygame.
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.10
install_requires =
    attrs >= 21.4.0
    appdirs >= 1.4.0

[options.packages.find]
where = src

[options.entry_points]
# See https://setuptools.pypa.io/en/latest/userguide/entry_point.html
gui_scripts =
    minesweeper = minesweeper:main

[options.extras_require]
test =
    pytest
    pytest-cov
